@@ -149,6 +149,14 @@
 	<li>The current heading was not always correctly
 	substituted when used in the page header or footer.</li>
 
+	<li>When converting web pages from the GUI, the
+	table-of-contents page number preferences were
+	incorrectly used.</li>
+
+	<li>PDF page effects/transitions were not put in the right
+	part of the page dictionary, causing them not to be
+	used by the PDF reader application.</li>
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
